# kodak

./: Cargo.toml  README.md
doc/: crates.js  search-index.js  settings.html  source-files.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
doc/implementors/core/default/: trait.Default.js
doc/implementors/core/fmt/: trait.Debug.js
doc/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
doc/implementors/core/ops/arith/: trait.Add.js
doc/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/kodak/: all.html  index.html  sidebar-items.js  struct.Colour.html  struct.Dim.html  struct.Image.html  struct.Loc.html  struct.Region.html
doc/src/kodak/: lib.rs.html
src/: lib.rs  main.rs
