[package]
name = "kodak"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "A crate for manipulating images."
authors = ["Simeon Duwel <tameimpalafan123@gmail.com>"]
keywords = ["image", "photo", "png"]
repository = "https://github.com/WalrusGumboot/kodak"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17.5"
